[workspace]
members = [
    "neodb-rust",
    "neodb-storage",
    "neodb-cache", 
    "neodb-traversal",
    "neodb-ffi"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["NeoDB Team <team@neospace.tech>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/neospacetech/neodb-core"
keywords = ["graph", "database", "neodb", "performance"]
categories = ["database", "data-structures"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"

# Storage dependencies
rocksdb = "0.21"
memmap2 = "0.9"

# Concurrency and async
dashmap = "5.5"
parking_lot = "0.12" 
crossbeam = "0.8"

# FFI dependencies  
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }