[package]
name = "neodb-cache"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "In-memory caching system for NeoDB"
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
tokio.workspace = true