[package]
name = "neodb-ffi"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Python FFI bindings for NeoDB Rust core"
repository.workspace = true

[lib]
name = "neodb_ffi"
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
pyo3.workspace = true
numpy.workspace = true

# Local dependencies
neodb-rust = { path = "../neodb-rust" }