[package]
name = "neodb-traversal"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Graph traversal algorithms for NeoDB"
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true
tokio.workspace = true